<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container_fragmentUserAddMatch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.UserAddMatchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_topUserAddMatch"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@drawable/container_tophome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_backArrowUserAddMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_arrow_back_white_36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/headerUserAddMatch_textView"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_backArrowUserAddMatch" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/userAddMatchHere_textView"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_sportTagAddMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sportTag_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_topUserAddMatch" />

    <Spinner
        android:id="@+id/spinner_sportItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sportTagAddMatch" />

    <TextView
        android:id="@+id/textView_sportTitleAddMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sportTitle_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_sportItem" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/sportTitle_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sportTitleAddMatch" />

    <TextView
        android:id="@+id/textView_sportAddressLocationAddMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sportAddressLocation_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/sportAddressLocation_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sportAddressLocationAddMatch" />

    <TextView
        android:id="@+id/textView_currentPlayerAddMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sportCurrentPlayer_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/sportCurrentPlayer_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_currentPlayerAddMatch" />

    <TextView
        android:id="@+id/textView_maxPlayerAddMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sportMaxPlayer_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ellipsize="end"
        android:ems="10"
        android:hint="@string/sportMaxPlayer_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_maxPlayerAddMatch" />

    <Button
        android:id="@+id/button_addMatch"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/btn_addMatch"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <Button
        android:id="@+id/button_resetMatch"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_cancel"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/reset_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />
</androidx.constraintlayout.widget.ConstraintLayout>