<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_fragmentDetailUserRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.UserDetailInfoRegisterFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_topDetailUserRegister"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="@drawable/container_tophome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_headerDetailUserRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/headerUserInfoDetail_textView"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_backArrow">
        </TextView>

        <TextView
            android:id="@+id/textView_inputYourDetailHere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/roboto_light"
            android:text="@string/inputYourProfileHere_textView"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_headerDetailUserRegister">
        </TextView>

        <ImageView
            android:id="@+id/imageView_backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_arrow_back_white_36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/username_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_topDetailUserRegister">
    </TextView>

    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/username_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_userName">
    </EditText>

    <TextView
        android:id="@+id/textView_fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/userFullName_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_userName">
    </TextView>

    <EditText
        android:id="@+id/editText_fullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/userFullName_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fullName">
    </EditText>

    <TextView
        android:id="@+id/textView_fullAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/userFullAddress_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_fullName">
    </TextView>

    <EditText
        android:id="@+id/editText_fullAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/userFullAddress_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fullAddress">
    </EditText>

    <TextView
        android:id="@+id/textView_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/userBio_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_fullAddress">
    </TextView>

    <EditText
        android:id="@+id/editText_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/userBio_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_bio">
    </EditText>

    <TextView
        android:id="@+id/textView_telpNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/userTelpNumber_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_bio">
    </TextView>

    <EditText
        android:id="@+id/editText_telpNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/userTelpNumber_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_telpNumber">
    </EditText>

    <Button
        android:id="@+id/button_signUpComplete"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/signup_button"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_telpNumber">
    </Button>

    <Button
        android:id="@+id/button_resetInput"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_cancel"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/reset_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_telpNumber"></Button>

    <ProgressBar
        android:id="@+id/progressBar_onComplete"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/editText_bio"
        app:layout_constraintEnd_toEndOf="@+id/editText_fullAddress"
        app:layout_constraintStart_toStartOf="@+id/editText_fullAddress"
        app:layout_constraintTop_toBottomOf="@+id/editText_fullName">
    </ProgressBar>
</androidx.constraintlayout.widget.ConstraintLayout>