<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screenLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="120dp"
    android:background="@drawable/container_loginregister"
    android:fadeScrollbars="true"
    android:isScrollContainer="true"
    android:nestedScrollingEnabled="false"
    android:overScrollMode="always"
    android:scrollIndicators="right"
    app:layout_constraintBottom_toBottomOf="@id/screenLoginRegister"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/email_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/email_editText"
        android:inputType="textPersonName"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_email" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/password_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password_editText"
        android:inputType="textPersonName|textPassword"
        android:textColorHint="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_password" />

    <TextView
        android:id="@+id/textView_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forgotPassword_textView"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/login_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_noAccountYet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/noAccountYet_textView"
        android:textColor="@color/darkestGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

</androidx.constraintlayout.widget.ConstraintLayout>

