<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screenLoginRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkestGray"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/textView_mainLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/mainLogo"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signIn_textView"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_mainLogo"
        app:layout_constraintEnd_toStartOf="@+id/textView_signUp" />

    <TextView
        android:id="@+id/textView_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/roboto"
        android:text="@string/signUp_textView"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView_mainLogo"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>